# safe-init

./: Cargo.toml  README.md
examples/taking-references/: Cargo.toml
examples/taking-references/src/: main.rs
src/: deref.rs  deref_mut.rs  lib.rs  macros.rs
