[package]
name = "safe-init"
version = "1.0.3"
edition = "2021"

license-file = "LICENSE"
description = "Safe way to interact with the uninitialized or lately initialized data"
readme = "README.md"
documentation = "https://docs.rs/safe-init/latest/safe_init/"
homepage = "https://github.com/kvxmmu/safe-init"
repository = "https://github.com/kvxmmu/safe-init"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
